added ignored kits in config